--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -10,6 +10,9 @@ footer a {
   margin: 0 1rem;
   color: unset;
 }
+footer a:hover {
+  color: #fa7268;
+}
 footer .footer-logo {
   display: flex;
   gap: 1rem;
